    options.  Thanks to Lele Gaifax.

* docutils/parsers/rst/directives/tables.py:

  - Added "encoding" directive to "csv-table" directive.
  - Added workaround for lack of Unicode support in csv.py, for
    non-ASCII CSV input.

* docutils/transforms/misc.py:

  - Fixed bug when multiple "class" directives are applied to a single
    element.

* docutils/transforms/references.py:

  - Added support for trimming whitespace from beside substitution
    references.

* docutils/transforms/universal.py:

  - FinalChecks now checks for illegal transitions and moves
    transitions between sections.

* docutils/writers/html4css1.py:

  - HTMLTranslator.encode now converts U+00A0 to "&nbsp;".
  - "stylesheet" and "stylesheet_path" settings are now mutually
    exclusive.
  - Added support for the new line_block/line structure.
  - --footnote-references now overrides
    --trim-footnote-reference-space, if applicable.
  - Added support for ``compound`` elements.

* docutils/writers/latex2e.py:

  - no newline after depart_term.
  - Added translations for some Unicode quotes.
  - Added option "font-encoding", made package AE the default.
  - "stylesheet" and "stylesheet_path" settings are now mutually
    exclusive.
  - --footnote-references now overrides
    --trim-footnote-reference-space, if applicable.
  - The footnote label style now matches the footnote reference style
    ("brackets" or "superscript").
  - Added support for ``compound`` elements.

* docs/ref/docutils.dtd:

  - Changed structure of the ``line_block`` element; added ``line``.
  - Added ``compound`` element.
  - Added "ltrim" and "rtrim" attributes to
    ``substitution_definition`` element.

* docs/ref/rst/directives.txt

  - Marked "line-block" as deprecated.

* docs/ref/rst/restructuredtext.txt:

  - Added syntax for line blocks.

* tools/stylesheets/default.css:

  - Added support for the new line_block structure.


Release 0.3.5 (2004-07-29)
==========================

General:
