@@ -76,6 +76,16 @@ totest['raw'] = [
             
                <p>Can't have both content and file attribute.</p>
 """],
+[r"""
+.. raw:: latex html
+ 
+   \[ \sum_{n=1}^\infty \frac{1}{n} \text{ etc.} \]
+""",
+"""\
+<document source="test data">
+    <raw format="latex html" xml:space="preserve">
+        \\[ \\sum_{n=1}^\\infty \\frac{1}{n} \\text{ etc.} \\]
+"""],
 ]
 
 
